fix broken backward compatibility